more functions added to fn imports

--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ A simple workflow is outlined below.
 In this case, we use `extract_era5` to read in the single file, narrowing the coordinates slightly.
 
 ```{r, include = TRUE}
-# # Load package
+# Load package 
 # library(ERA5handlers)
 # # Specify local data store
 # dat_store_era5 <- "D:/DATA/General data/ERA5/"
