--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ A simple workflow is outlined below.
 
 5) Import desired files into R
 
-* The `collate_era5()` function imports and parses ERA5 netcdf4 files. The package ships with a small netcdf4 file containing 2m temperature data from 1999, used in line with the Copernicus [license](https://cds.climate.copernicus.eu/api/v2/terms/static/licence-to-use-copernicus-products.pdf). The data includes the grid points lat = c(-80.00 -80.25 -80.50) and lon = c(-81.50 -81.25 -81.00 -80.75 -80.50), covering a small portion of the southern Ellsworth Mountains in Antarctica.
+* The `collate_era5()` function imports and parses ERA5 netcdf4 files. The package ships with a small netcdf4 file containing 2m temperature data from 2000, used in line with the Copernicus [license](https://cds.climate.copernicus.eu/api/v2/terms/static/licence-to-use-copernicus-products.pdf). The data includes the grid points lat = c(-80.00 -80.25 -80.50) and lon = c(-81.50 -81.25 -81.00 -80.75 -80.50), covering a small portion of the southern Ellsworth Mountains in Antarctica.
 
 In this case, we use `collate_era5()` to read in the single file, and narrow the coordinates to a single grid point.
 
@@ -51,15 +51,15 @@ dat_store_era5 <- "D:/DATA/General data/ERA5/"
 # Get filenames in store
 era5_fnames <- list.files(dat_store_era5, full.names = TRUE)
 # Get target era5 file
-temp2m_1999_PH <- collate_era5(era5_fnames, string = 'temp2m_1999', coords = c(-80.25, -81.25))
-head(temp2m_1999_PH)
+temp2m_2000_PH <- collate_era5(era5_fnames, string = 'temp2m_2000', coords = c(-80.25, -81.25))
+head(temp2m_2000_PH)
 ```
 
 Imported data can now be analysed freely. A simple monthly value aggregator is provided in `monthmeans_era5()`, which will determine the monthly mean or standard deviation for the value in a given given field within an ERA5 file. Months can be extracted from a single year, or across multiple years.
 
 ```{r, echo = TRUE, include = TRUE,collapse = FALSE, warning = FALSE, message = FALSE }
 # Derive month means. Single year.
-PH_temp_monthmeans <- monthmeans_era5(temp2m_1999_PH, total_months = TRUE) %>%
+PH_temp_monthmeans <- monthmeans_era5(temp2m_2000_PH, total_months = TRUE) %>%
   mutate(month_varmean = month_varmean - 273.15) # K to C conversion
 # Plot the monthly temperature means at this grid point for 1999, with standard devations
 sd_polygon_avtemp <- data.frame(x = c(rep(PH_temp_monthmeans$month), 
@@ -83,7 +83,7 @@ ggplot() +
   scale_x_continuous(breaks = seq(1,12,1), labels = month_labs, expand = c(0,0)) +
   scale_y_continuous(expand = c(0,0), limits = c(-40,-5), breaks = seq(-40,-5,5)) +
   labs(x = "Month", y = "Temp in C") +
-  ggtitle('ERA5 mean monthly temperature during 1999 for 80.25S 81.25W') +
+  ggtitle('ERA5 mean monthly 2m temperature during 2000 for 80.25S 81.25W') +
   theme_cowplot(12)
 
 ```
