--- a/README.Rmd
+++ b/README.Rmd
@@ -52,6 +52,25 @@ get_CDS_era5(key = "0000-I'm-not-going-to-show-my-API-key-here",
              download_directory = export_dir)
 ```
 
+* Alternatively, here is code for500 hPa geopotential height data for the entire Southern Hemisphere at 6h timesteps covering 1950 to 2020, fetched as yearly requests.
+
+```{r, echo = TRUE, include = TRUE, eval = FALSE, collapse = FALSE, warning = FALSE, message = FALSE }
+export_dir = "C:/send/files/here"
+get_CDS_era5(key = "0000-I'm-not-going-to-show-my-API-key-here",
+             user = "m.harris@gns.cri.nz",
+             archive = TRUE,
+             dataset = "reanalysis-era5-pressure-levels",
+             pressure_level = "500",
+             coords = c(0, -180, -90, 180), # NWSE, RICE coords
+             variables = c("geopotential"),
+             by = "year",
+             time = c("0","6","12","18"),
+             start_YYYYMM = "195001",
+             end_YYYYMM = "202012",
+             identifier = "SH_GPH_6H",
+             download_directory = export_dir)
+```
+
 3) Import desired files into R
 
 * The `collate_era5()` function imports and parses ERA5 netcdf4 files. The package ships with a small netcdf4 file containing 2m temperature data from 2000, used in line with the Copernicus [license](https://cds.climate.copernicus.eu/api/v2/terms/static/licence-to-use-copernicus-products.pdf). The data includes the grid points lat = c(-80.00 -80.25 -80.50) and lon = c(-81.50 -81.25 -81.00 -80.75 -80.50), covering a small portion of the southern Ellsworth Mountains in Antarctica.
